# cytoflow-vis

./: .gitignore  ASSUMPTIONS.md  README.md  ROADMAP.md  main.py  pyproject.toml
examples/: README.md
examples/lentiviral_titration/: PROTOCOL.md  samples.csv  titration.toml
src/cytoflow_vis/: __init__.py  analysis.py  cli.py  fluor_cli.py  fluorescence.py  gating.py  io.py  plotting.py  runner.py  spillover_cli.py  style.py
src/flowsmith/: __init__.py  analysis.py  cli.py  fluorescence.py  gating.py  plotting.py  runner.py  spillover.py  spillover_cli.py  style.py
tests/: test_gating.py  test_pipeline.py
