[project]
name = "cytoflow-vis"
version = "0.1.0"
description = "Interactive gating and visualization for flow cytometry FCS files."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flowkit>=1.3.2",
    "matplotlib>=3.11.0",
    "pyside6>=6.11.1",
]

[project.scripts]
gate-cells = "cytoflow_vis.cli:main"
analyze = "cytoflow_vis.runner:main"
compute-spillover = "cytoflow_vis.spillover_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cytoflow_vis"]
