[project]
name = "flowsmith"
version = "0.1.0"
description = "Interactive gating and visualization for flow cytometry FCS files."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flowkit>=1.3.2",
    "matplotlib>=3.11.0",
    "pyside6>=6.11.1",
    "scipy>=1.11",
]

[project.scripts]
gate-cells = "flowsmith.cli:main"
analyze = "flowsmith.runner:main"
compute-spillover = "flowsmith.spillover_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowsmith"]
